# auth/route/userRoute.js
@@ -1,0 +1,12 @@
+
+// const express = require('express');
+// const route = express.Router();
+
+// const userService = require('../services/userService');
+
+// const checkAuth = require('../middleware/checkAuth');
+
+// route.get('/allUsers', checkAuth, userService.getAllUser);
+// route.post('/jwt', userService.vtoken);
+
+// module.exports = route;
